# pyBDY

./: .cruft.json  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  DESCRIPTION.rst  Dockerfile  Makefile  README.md  README.rst  README_markdown.md  contribution_guidelines.md  environment.yml  environment_pynemo.yml  index.html  mkdocs.yml  pynemo_37.yml  pynemo_39.yml  pynemo_stats  pyproject.toml  setup.cfg  setup.py  sitemap.xml  test_cmems.py  test_cmes.py
.github/workflows/: ci.yml  on-push.yml
DOC/: PyNEMO.tex  clean.sh
DOC/TexFiles/: NEMO.ist  ametsoc.bst  clean.sh  floatrow.sty  math_abbrev.sty
DOC/TexFiles/Biblio/: Biblio.bib
DOC/TexFiles/Chapters/: Abstracts_Foreword.tex  Chap_Setup.tex  Chap_examples.tex  Chap_qs.tex  Introduction.tex
DOC/TexFiles/Namelist/: bdy_tools_namelist  namgrd.nml  namsco.nml  namvert.nml
_tests_old/: __init__.py  nemo_bdy_msk_c_test.py  nemo_bdy_ncgen_test.py  nemo_tide_test.py
ci/: environment-ci.yml
conda-recipe/: bld.bat  build.sh  meta.yaml
docs/: Makefile  format_docs.py  grid.md  index.md  index_full.md  make.bat  make_docs.sh  mkdocs.yml  module_structure.md  pybdy.gui.md  pybdy.md  pybdy.reader.md  pybdy.tide.md  pybdy.utils.md
docs/docs/: index.md
docs/docs/other/: analysis.md  deep_dives.md  outputs.md  validation.md
docs/other/: analysis.md  outputs.md  validation.md
docs/source/: CMEMS_downloader_usage.rst  conf.py  examples.rst  index.rst  installation.rst  intro.rst  ncml_generator_usage.rst  tides.rst  troubleshooting.rst  usage.rst
grid/: index.html
index_full/: index.html
inputs/: CMEMS.ncml  FVCOM.ncml  grid_name_map_readme.txt  namelist.bdy  namelist_cmems.bdy  namelist_cmes.bdy  namelist_local.bdy  namelist_remote.bdy  src_data_CMEMS.ncml  src_data_local.ncml  src_data_remote.ncml
inputs/benchmark/: README
module_structure/: index.html
plotting/: plot_bdy.py  plot_coords.py
pybdy/: index.html
pybdy.gui/: index.html
pybdy.reader/: index.html
pybdy.tide/: index.html
pybdy.utils/: index.html
pynemo/: nemo_bdy_dl_cmems.py  nemo_bdy_dl_cmes.py  nemo_bdy_dst_coord.py  nemo_bdy_extr_tm3.py  nemo_bdy_gen_c.py  nemo_bdy_grid_angle.py  nemo_bdy_ice.py  nemo_bdy_ncgen.py  nemo_bdy_ncpop.py  nemo_bdy_scr_coord.py  nemo_bdy_setup.py  nemo_bdy_source_coord.py  nemo_bdy_src_time.py  nemo_bdy_zgrv2.py  nemo_bogadons_gauntlet.py  nemo_coord_gen_pop.py  nemo_ncml_parse.py  profile.py  profiler.py  pynemo_exe.py  pynemo_ncml_generator.py  pynemo_settings_editor.py  pynemo_unit_test.py  unit_test.py  variable.info
pynemo/config/: motu_config_template.ini
pynemo/gui/: base.ncml  mynormalize.py  nemo_bdy_input_window.py  nemo_bdy_mask.py  nemo_bdy_mask_gui.py  nemo_bdy_mask_gui.py.interactive_cbar  nemo_bdy_namelist_edit.py  nemo_ncml_generator.py  nemo_ncml_tab_widget.py  selection_editor.py
pynemo/output_NCML/: NEMO_output_I.ncml  NEMO_output_T.ncml  NEMO_output_U.ncml  NEMO_output_V.ncml  NEMO_output_Z.ncml  NEMO_tide_U.ncml  NEMO_tide_V.ncml  NEMO_tide_Z.ncml
pynemo/reader/: directory.py  factory.py  ncml.py
pynemo/tests/: __init__.py  bdy_coords.py  coord_gen.py  gcoms_break_depth_test.py  nemo_bdy_gen_c_test.py  nemo_bdy_msk_c_test.py  nemo_bdy_ncgen_test.py  nemo_bdy_setup_test.py  nemo_tide_test.py  reader_ncml_test.py  test.ncml  testremote.ncml
pynemo/tide/: fes2014_extract_HC.py  fes_extract_HC.py  nemo_bdy_tide.py  nemo_bdy_tide2.py  nemo_bdy_tide3.py  nemo_bdy_tide_ncgen.py  tpxo_extract_HC.py
pynemo/unit_tests/: UT_config.py  gen_tools.py  namelist_unit_test_offset.bdy  namelist_unit_test_rotated.bdy  test_gen.py  unit_tests.ncml
pynemo/utils/: Constants.py  cmems_errors.py  e3_to_depth.py  gcoms_break_depth.py  nemo_bdy_lib.py
search/: search_index.json
src/grid/: __init__.py  hgr.py  zgr.py
src/pybdy/: nemo_bdy_chunk.py  nemo_bdy_dst_coord.py  nemo_bdy_extr_assist.py  nemo_bdy_extr_tm3.py  nemo_bdy_gen_c.py  nemo_bdy_gen_c_old.py  nemo_bdy_gen_c_refactor.py  nemo_bdy_grid_angle.py  nemo_bdy_ice.py  nemo_bdy_ncgen.py  nemo_bdy_ncpop.py  nemo_bdy_scr_coord.py  nemo_bdy_setup.py  nemo_bdy_source_coord.py  nemo_bdy_vel_correct.py  nemo_bdy_zgrv2.py  nemo_coord_gen_pop.py  profiler.py  pybdy_exe.py  pybdy_ncml_generator.py  pybdy_settings_editor.py  variable.info
src/pynemo/: nemo_bdy_dst_coord.py  nemo_bdy_extr_tm3.py  nemo_bdy_gen_c.py  nemo_bdy_ncpop.py  nemo_bdy_setup.py  nemo_bdy_src_time.py  profiler.py  pynemo_exe.py  pynemo_ncml_generator.py  pynemo_settings_editor.py
test_scripts/: bdy_coords_plot.py  bdy_var_plot.py  meta_data.py  ncml_gen_nc.py  test_cmems.py
tests/: bathymetry.py  bdy_coords.py  coord_gen.py  gcoms_break_depth_test.py  namelist_end_to_end.bdy  namelist_synthetic.bdy  nemo_tide_test.py  pyBDY_unit_test.ipynb  synth_bathymetry.py  test_00_version.py  test_bathymetry.py  test_bdy_chunk.py  test_end_to_end.py  test_hgr.py  test_nemo_bdy_chunk.py  test_nemo_bdy_extr_assist.py  test_nemo_bdy_gen_c.py  test_nemo_bdy_vel_correct.py  test_zgr.py  test_zz_end_to_end.py  testremote.ncml  variables.py
tests/data/: grid_name_map.json  namelist_zz_end_to_end.bdy  sc_test.ncml
tests/namelists/: namelist_test_001.bdy  namelist_test_002.bdy  src_data_namelist_test_001.ncml  src_data_namelist_test_002.ncml
tests/synth/: synth_bathymetry.py  synth_temp_sal.py  synth_zgrid.py
tests/temp_test_001/: child.nc  parent.nc
tests_old/: bdy_coords.py  nemo_bdy_gen_c_test.py  nemo_bdy_setup_test.py  reader_ncml_test.py  test.ncml
unit_tests/: coord_gen.py  gen_tools.py  namelist_unit_test.bdy  namelist_unit_test_offset.bdy  namelist_unit_test_orth.bdy  namelist_unit_test_rotated.bdy  resample_netcdf.py  rotate_pts.py  src_data_unit_tests.ncml  test_gen.py  unit_test.py  unit_tests.ncml
(+38 files in other folders)
